--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,13 @@
 .header {
   border-bottom: 1px solid #ececec;
-
+  padding: 10px 0;
   .conteiner {
-    display: flex;
-
-    align-items: center;
+    //   display: flex;
+    //   align-items: center;
   }
 
   &__logo {
-    margin-right: 93px;
+    // margin-right: 93px;
   }
 
   &__studio {
@@ -16,27 +15,33 @@
   }
 }
 
+.header-menu {
+  @media screen and (max-width: 479px) {
+    display: none;
+  }
+}
+
 .navigation {
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
 }
 
 .menu-list {
-  display: flex;
+  // display: flex;
 }
 
 .menu-list__item {
-  position: relative;
+  // position: relative;
 
   &:not(:last-child) {
-    margin-right: 50px;
+    // margin-right: 50px;
   }
 }
 
 .menu-list__link {
-  position: relative;
+  // position: relative;
 
-  padding: 32px 0;
+  // padding: 32px 0;
 
   @include font(500, $lh: 1.14, $ls: 0.02em);
   // font-weight: 500;
@@ -56,8 +61,8 @@
   &::after {
     content: '';
 
-    position: absolute;
-    bottom: 0;
+    // position: absolute;
+    // bottom: 0;
 
     display: block;
     width: 100%;
@@ -77,16 +82,16 @@
 }
 
 .address-list {
-  display: flex;
-  margin-left: auto;
+  // display: flex;
+  // margin-left: auto;
 }
 
 .address-list__item:not(:last-child) {
-  margin-right: 50px;
+  // margin-right: 50px;
 }
 
 .address-list__mailto {
-  @extend %address-list__soc;
+  // @extend %address-list__soc;
 
   &:hover,
   &:focus {
@@ -95,7 +100,7 @@
 }
 
 .address-list__tel {
-  @extend %address-list__soc;
+  // @extend %address-list__soc;
 
   &:hover,
   &:focus {
@@ -104,5 +109,5 @@
 }
 
 .address-list__icon {
-  margin-right: 10px;
+  // margin-right: 10px;
 }
