--- a/css/main.css
+++ b/css/main.css
@@ -10,20 +10,6 @@
   --title-color: #212121;
 }
 
-.address-list__tel, .address-list__mailto {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 32px 0;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--header-list-address-color);
-  fill: currentColor;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 body {
   max-width: 1600px;
   margin-right: auto;
@@ -74,9 +60,24 @@ img {
 }
 
 .conteiner {
-  width: 1200px;
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .conteiner {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .conteiner {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .conteiner {
+    width: 1200px;
+  }
 }
 
 .section {
@@ -103,44 +104,26 @@ img {
 .logo {
   font-family: "Raleway", "sans-serif";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   color: #2196f3;
 }
 
 .header {
   border-bottom: 1px solid #ececec;
-}
-.header .conteiner {
-  display: flex;
-  align-items: center;
-}
-.header__logo {
-  margin-right: 93px;
+  padding: 10px 0;
 }
 .header__studio {
   color: #000000;
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.menu-list {
-  display: flex;
-}
-
-.menu-list__item {
-  position: relative;
-}
-.menu-list__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (max-width: 479px) {
+  .header-menu {
+    display: none;
+  }
 }
 
 .menu-list__link {
-  position: relative;
-  padding: 32px 0;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -153,8 +136,6 @@ img {
 }
 .menu-list__link::after {
   content: "";
-  position: absolute;
-  bottom: 0;
   display: block;
   width: 100%;
   height: 4px;
@@ -167,25 +148,12 @@ img {
   opacity: 1;
 }
 
-.address-list {
-  display: flex;
-  margin-left: auto;
-}
-
-.address-list__item:not(:last-child) {
-  margin-right: 50px;
-}
-
 .address-list__mailto:hover, .address-list__mailto:focus {
   color: var(--header-list-address-hover-color);
 }
 
 .address-list__tel:hover, .address-list__tel:focus {
   color: var(--header-list-address-hover-color);
-}
-
-.address-list__icon {
-  margin-right: 10px;
 }
 
 .hero {
