--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -113,8 +113,23 @@ img {
   border-bottom: 1px solid #ececec;
   padding: 10px 0;
 }
+.header .conteiner {
+  display: flex;
+  align-items: center;
+}
 .header__studio {
   color: #000000;
+}
+
+.menu-open-btn, .menu-close-btn {
+  padding: 0;
+  margin-left: auto;
+  border: none;
+  background-color: #ffffff;
+}
+
+.menu-open-btn__icon, .menu-close-btn__icon {
+  display: block;
 }
 
 @media screen and (max-width: 479px) {
@@ -154,6 +169,65 @@ img {
 
 .address-list__tel:hover, .address-list__tel:focus {
   color: var(--header-list-address-hover-color);
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #ffffff;
+}
+
+.menu-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mob-menu-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-list__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-address-list {
+  margin-top: auto;
+}
+
+.mob-address-list__item {
+  margin-bottom: 32px;
+}
+.mob-address-list__item:last-child {
+  margin-bottom: 64px;
+}
+
+.mob-address-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mod-soc-list {
+  display: inline-flex;
+}
+
+.mod-soc-list__list:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mod-soc-list_link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
 
 .hero-portfolio {
