--- a/css/main.css
+++ b/css/main.css
@@ -214,15 +214,41 @@ img {
   margin-bottom: 32px;
 }
 
+.mob-address-list__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mob-address-list__mailto {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
 .mod-soc-list {
   display: inline-flex;
 }
 
-.mod-soc-list__list:not(:last-child) {
-  margin-right: 10px;
+.mod-soc-list__list {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.mod-soc-list__list:not(:last-child)::after {
+  content: "";
+  width: 22px;
+  height: 1px;
+  background: rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
 }
 
 .mod-soc-list_link {
+  position: relative;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
