--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -60,8 +60,9 @@ img {
 }
 
 .conteiner {
-  width: 100%;
-  padding: 0 15px;
+  max-width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
   margin: 0 auto;
 }
 @media screen and (min-width: 480px) {
@@ -111,30 +112,85 @@ img {
 
 .header {
   border-bottom: 1px solid #ececec;
-  padding: 10px 0;
+}
+@media screen and (max-width: 767px) {
+  .header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
 .header .conteiner {
   display: flex;
   align-items: center;
 }
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 93px;
+  }
+}
+
 .header__studio {
   color: #000000;
 }
 
 .menu-open-btn, .menu-close-btn {
+  display: none;
   padding: 0;
   margin-left: auto;
   border: none;
   background-color: #ffffff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .menu-open-btn, .menu-close-btn {
+    display: block;
+  }
+}
+.menu-open-btn:focus, .menu-close-btn:focus {
+  fill: #2196f3;
 }
 
 .menu-open-btn__icon, .menu-close-btn__icon {
   display: block;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .header-menu {
     display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header-menu {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-list {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-list__item {
+    position: relative;
+  }
+  .menu-list__item:not(:last-child) {
+    margin-right: 50px;
   }
 }
 
@@ -149,26 +205,76 @@ img {
 .menu-list__link:hover, .menu-list__link:focus {
   color: var(--nav-hover-color);
 }
-.menu-list__link::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196f3;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.menu-list__link:hover::after, .menu-list__link:focus::after {
-  opacity: 1;
+@media screen and (min-width: 768px) {
+  .menu-list__link {
+    position: relative;
+    padding: 32px 0;
+  }
+  .menu-list__link:not(:last-child) {
+    margin-right: 50px;
+  }
+  .menu-list__link::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196f3;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-list__link:hover::after, .menu-list__link:focus::after {
+    opacity: 1;
+  }
 }
 
-.address-list__mailto:hover, .address-list__mailto:focus {
-  color: var(--header-list-address-hover-color);
+@media screen and (min-width: 1200px) {
+  .address-list {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
 }
 
-.address-list__tel:hover, .address-list__tel:focus {
+@media screen and (min-width: 1200px) {
+  .address-list__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+.address-list__mailto, .address-list__tel {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: var(--header-list-address-color);
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.address-list__mailto:hover, .address-list__tel:hover, .address-list__mailto:focus, .address-list__tel:focus {
   color: var(--header-list-address-hover-color);
+}
+@media screen and (min-width: 1200px) {
+  .address-list__mailto, .address-list__tel {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .address-list__icon {
+    margin-right: 10px;
+  }
 }
 
 .mob-menu {
@@ -185,6 +291,10 @@ img {
   position: absolute;
   top: 10px;
   right: 15px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-close-btn:focus {
+  fill: #2196f3;
 }
 
 .mob-menu-list__item:not(:last-child) {
@@ -197,6 +307,10 @@ img {
   line-height: 1.18;
   letter-spacing: 0.02em;
   color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu-list__link:hover, .mob-menu-list__link:focus {
+  color: var(--nav-hover-color);
 }
 
 .mob-address-list {
