--- a/sass/components/_conteiner.scss
+++ b/sass/components/_conteiner.scss
@@ -1,6 +1,7 @@
 .conteiner {
-  width: 100%;
-  padding: 0 15px;
+  max-width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
   margin: 0 auto;
 
   @media screen and (min-width: 480px) {
