--- a/sass/layout/main/_hero.scss
+++ b/sass/layout/main/_hero.scss
@@ -1,27 +1,58 @@
 .hero {
   background-color: var(--background-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
+  // padding-top: 200px;
+  // padding-bottom: 200px;
+  padding: 118px 0;
+  // background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  //   url(../images/Hero-Img.jpg);
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/Hero-Img.jpg);
+    url(../images/hero-mob.jpg);
+  background-repeat: no-repeat;
+  // background-size: contain;
+  background-position: center;
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero-tab.jpg);
+    // background-size: cover;
+
+    // background-repeat: no-repeat;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero-desk.jpg);
+    // background-size: contain;
+    // background-repeat: no-repeat;
+  }
 }
 
 .hero__title {
-  max-width: 696px;
+  // max-width: 696px;
+  max-width: 360px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
 
-  @include font(900, 44px, 1.36, 0.06em);
+  // @include font(900, 44px, 1.36, 0.06em);
   // font-weight: 900;
   // font-size: 44px;
   // line-height: 1.36;
   // letter-spacing: 0.06em;
+  @include font(900, 26px, 1.62, 0.06em);
+
   text-align: center;
   text-transform: uppercase;
 
   color: #ffffff;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 696px;
+
+    @include font(900, 44px, 1.36, 0.06em);
+  }
 }
 
 .hero__btn {
