--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -278,17 +278,20 @@ img {
 }
 
 .mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .group {
-  position: fixed;
-  top: 0;
-  left: 0;
   padding: 48px 40px;
-  width: 100vw;
-  height: 100vh;
-  background-color: #ffffff;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 480px;
   transform: translateX(0);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
