--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,7 @@ img {
   .header-menu {
     display: flex;
     align-items: center;
+    width: 100%;
   }
 }
 
@@ -230,6 +231,11 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .address-list {
+    margin-left: auto;
+  }
+}
 @media screen and (min-width: 1200px) {
   .address-list {
     display: flex;
@@ -238,6 +244,11 @@ img {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .address-list__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .address-list__item:not(:last-child) {
     margin-right: 50px;
@@ -260,17 +271,28 @@ img {
 .address-list__mailto:hover, .address-list__tel:hover, .address-list__mailto:focus, .address-list__tel:focus {
   color: var(--header-list-address-hover-color);
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .address-list__mailto, .address-list__tel {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
     display: flex;
     align-items: center;
   }
 }
+@media screen and (min-width: 1200px) {
+  .address-list__mailto, .address-list__tel {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+  }
+}
 
+@media screen and (min-width: 768px) {
+  .address-list__icon {
+    margin-right: 8px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .address-list__icon {
     margin-right: 10px;
@@ -288,6 +310,7 @@ img {
 }
 
 .group {
+  height: 100%;
   padding: 48px 40px;
   margin-right: auto;
   margin-left: auto;
@@ -307,6 +330,13 @@ img {
 }
 .menu-close-btn:focus {
   fill: #2196f3;
+}
+
+.navigation-contacts {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .mob-menu-list__item:not(:last-child) {
