--- a/css/main.css
+++ b/css/main.css
@@ -475,28 +475,63 @@ img {
 }
 
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .features {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
-.advantages-list {
-  display: flex;
-  justify-content: space-between;
+@media screen and (min-width: 768px) {
+  .advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
-.advantages-list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 767px) {
+  .advantages-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .advantages-list__item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .advantages-list__item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .advantages-list__soc {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
+  max-width: 450px;
   height: 120px;
   margin-bottom: 30px;
   border-radius: 4px;
   background-color: #f5f4fa;
+}
+@media screen and (min-width: 768px) {
+  .advantages-list__soc {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list__soc {
+    width: 270px;
+  }
 }
 
 .advantages-list__title {
@@ -508,6 +543,11 @@ img {
   text-transform: uppercase;
   color: var(--title-color);
 }
+@media screen and (max-width: 767px) {
+  .advantages-list__title {
+    text-align: center;
+  }
+}
 
 .advantages-list__text {
   font-weight: 400;
@@ -515,6 +555,16 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+}
+@media screen and (min-width: 768px) {
+  .advantages-list__text {
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list__text {
+    width: 270px;
+  }
 }
 
 .occupation {
@@ -846,8 +896,8 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 610px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -855,6 +905,12 @@ img {
 }
 .backdrop.is-hidden .modal {
   transform: scale(0.5);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal__close-btn {
@@ -875,14 +931,23 @@ img {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.03em;
   text-align: center;
   color: #212121;
 }
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+  }
+}
 
 .services__list {
   position: relative;
+  margin-bottom: 20px;
 }
 
 .services__item {
@@ -908,8 +973,8 @@ img {
 
 .services__input {
   padding-left: 42px;
-  width: 448px;
-  height: 40px;
+  width: 370px;
+  height: 44px;
   color: #2196f3;
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -918,6 +983,12 @@ img {
 }
 .services__input:focus {
   border-color: #2196f3;
+}
+@media screen and (min-width: 1200px) {
+  .services__input {
+    width: 448px;
+    height: 40px;
+  }
 }
 
 .services__icon {
@@ -933,7 +1004,7 @@ img {
 
 .services__textarea {
   padding: 12px 16px;
-  width: 448px;
+  width: 370px;
   height: 120px;
   color: #2196f3;
   outline: none;
@@ -953,12 +1024,16 @@ img {
 .services__textarea:focus {
   border-color: #2196f3;
 }
+@media screen and (min-width: 1200px) {
+  .services__textarea {
+    width: 448px;
+  }
+}
 
 .services__checkbox {
   position: relative;
   display: flex;
   align-items: center;
-  margin-top: 20px;
   margin-bottom: 30px;
 }
 
@@ -988,10 +1063,18 @@ img {
 
 .services__check-lable {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #757575;
+}
+@media screen and (min-width: 1200px) {
+  .services__check-lable {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
 }
 
 .services__check-lable a {
@@ -1004,6 +1087,10 @@ img {
   margin-left: auto;
   width: 200px;
   height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
   color: #ffffff;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
