--- a/sass/layout/_backdrop.scss
+++ b/sass/layout/_backdrop.scss
@@ -24,8 +24,9 @@
   transform: translate(-50%, -50%) scale(1);
 
   padding: 40px;
-  width: 528px;
-  height: 581px;
+
+  width: 450px;
+  height: 610px;
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -36,6 +37,11 @@
 
   .backdrop.is-hidden & {
     transform: scale(0.5);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
   }
 }
 
@@ -59,17 +65,19 @@
 .modal__title {
   margin-bottom: 12px;
 
-  @include font(700, 20px, 1.15);
-  // font-weight: 700;
-  // font-size: 20px;
-  // line-height: 1.15;
+  @include font(700, 20px, 1.5);
   text-align: center;
 
   color: #212121;
+
+  @media screen and (min-width: 1200px) {
+    @include font(700, 20px, 1.15);
+  }
 }
 
 .services__list {
   position: relative;
+  margin-bottom: 20px;
 }
 
 .services__item {
@@ -98,8 +106,8 @@
 
 .services__input {
   padding-left: 42px;
-  width: 448px;
-  height: 40px;
+  width: 370px;
+  height: 44px;
 
   color: $primary-color;
   outline: none;
@@ -110,6 +118,11 @@
 
   &:focus {
     border-color: $primary-color;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+    height: 40px;
   }
 }
 
@@ -128,7 +141,7 @@
 
 .services__textarea {
   padding: 12px 16px;
-  width: 448px;
+  width: 370px;
   height: 120px;
 
   color: $primary-color;
@@ -153,6 +166,10 @@
   &:focus {
     border-color: $primary-color;
   }
+
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
 }
 
 .services__checkbox {
@@ -160,7 +177,6 @@
 
   display: flex;
   align-items: center;
-  margin-top: 20px;
   margin-bottom: 30px;
 }
 
@@ -192,11 +208,13 @@
 }
 
 .services__check-lable {
-  @include font;
-  // font-size: 14px;
-  // line-height: 1.71;
+  @include font(400, 12px, 1.17);
 
   color: #757575;
+
+  @media screen and (min-width: 1200px) {
+    @include font;
+  }
 }
 
 .services__check-lable a {
@@ -210,6 +228,8 @@
   margin-left: auto;
   width: 200px;
   height: 50px;
+
+  @include font(700, 16px, 1.88, 0.06em);
 
   color: #ffffff;
   background: $primary-color;
