--- a/sass/layout/main/_features.scss
+++ b/sass/layout/main/_features.scss
@@ -1,28 +1,66 @@
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .advantages-list {
-  display: flex;
-  justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
-.advantages-list__item:not(:last-child) {
-  margin-right: 30px;
+.advantages-list__item {
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+  }
+
+  @media screen and (max-width: 1199px) {
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
 
 .advantages-list__soc {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
+  max-width: 450px;
   height: 120px;
+
   margin-bottom: 30px;
 
   border-radius: 4px;
 
   background-color: #f5f4fa;
+
+  @media screen and (min-width: 768px) {
+    max-width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 
 .advantages-list__title {
@@ -32,9 +70,14 @@
   // font-weight: 700;
   // font-size: 14px;
   // line-height: 1.14;
+
   text-transform: uppercase;
 
   color: var(--title-color);
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .advantages-list__text {
@@ -43,4 +86,12 @@
   // line-height: 1.71;
 
   color: #757575;
+
+  @media screen and (min-width: 768px) {
+    max-width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
