--- a/sass/layout/main/_occupation.scss
+++ b/sass/layout/main/_occupation.scss
@@ -1,6 +1,11 @@
 .occupation {
+  display: none;
   padding-top: 0;
   padding-bottom: 94px;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
 
 .occupation__title {
