--- a/sass/layout/main/_team.scss
+++ b/sass/layout/main/_team.scss
@@ -1,24 +1,31 @@
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   background-color: #f5f4fa;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team__title {
   margin-bottom: 50px;
 
-  @include font(700, 36px, 1.17);
-  // font-weight: 700;
-  // font-size: 36px;
-  // line-height: 1.17;
+  @include font(700, 28px, 1.18);
+
   text-align: center;
 
   color: var(--title-color);
+
+  @media screen and (min-width: 1200px) {
+    @include font(700, 36px, 1.17);
+  }
 }
 
 .person-list {
-  display: flex;
+  // display: flex;
 }
 
 .person-list__item {
