--- a/css/main.css
+++ b/css/main.css
@@ -778,14 +778,6 @@ img {
   flex-wrap: wrap;
 }
 
-.logo-company-list__item {
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.logo-company-list__item:hover, .logo-company-list__item:focus {
-  border: 1px solid #2196f3;
-}
 @media screen and (max-width: 767px) {
   .logo-company-list__item:not(:nth-child(2n)) {
     margin-right: 30px;
@@ -812,11 +804,19 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 210px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.logo-company-list__link:hover, .logo-company-list__link:focus {
+  border: 1px solid #2196f3;
 }
 
 .logo-company-list__icon {
-  width: 210px;
-  height: 92px;
+  width: 106px;
+  height: 60px;
   fill: #afb1b8;
 }
 .logo-company-list__link:hover .logo-company-list__icon, .logo-company-list__link:focus .logo-company-list__icon {
