--- a/sass/layout/main/_company.scss
+++ b/sass/layout/main/_company.scss
@@ -31,16 +31,6 @@
 }
 
 .logo-company-list__item {
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    border: 1px solid $primary-color;
-  }
-
   @media screen and (max-width: 767px) {
     &:not(:nth-child(2n)) {
       margin-right: 30px;
@@ -69,11 +59,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 210px;
+  height: 92px;
+
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    border: 1px solid $primary-color;
+  }
 }
 
 .logo-company-list__icon {
-  width: 210px;
-  height: 92px;
+  // width: 210px;
+  // height: 92px;
+  width: 106px;
+  height: 60px;
 
   fill: #afb1b8;
 
