--- a/css/main.css
+++ b/css/main.css
@@ -786,10 +786,12 @@ img {
     margin-bottom: 30px;
   }
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .logo-company-list__item:not(:nth-child(3n)) {
     margin-right: 30px;
   }
+}
+@media screen and (max-width: 1199px) {
   .logo-company-list__item:not(:nth-last-child(-n+3)) {
     margin-bottom: 30px;
   }
@@ -813,6 +815,16 @@ img {
 .logo-company-list__link:hover, .logo-company-list__link:focus {
   border: 1px solid #2196f3;
 }
+@media screen and (min-width: 768px) {
+  .logo-company-list__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logo-company-list__link {
+    width: 170px;
+  }
+}
 
 .logo-company-list__icon {
   width: 106px;
@@ -821,16 +833,6 @@ img {
 }
 .logo-company-list__link:hover .logo-company-list__icon, .logo-company-list__link:focus .logo-company-list__icon {
   fill: #2196f3;
-}
-@media screen and (min-width: 768px) {
-  .logo-company-list__icon {
-    width: 226px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .logo-company-list__icon {
-    width: 170px;
-  }
 }
 
 .footer {
