--- a/css/main.css
+++ b/css/main.css
@@ -803,11 +803,11 @@ img {
 }
 
 .logo-company-list__link {
+  width: 210px;
+  height: 92px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 210px;
-  height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1051,7 +1051,8 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   height: 610px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1128,7 +1129,8 @@ img {
 
 .services__input {
   padding-left: 42px;
-  width: 370px;
+  width: 100%;
+  max-width: 370px;
   height: 44px;
   color: #2196f3;
   outline: none;
@@ -1159,7 +1161,8 @@ img {
 
 .services__textarea {
   padding: 12px 16px;
-  width: 370px;
+  width: 100%;
+  max-width: 370px;
   height: 120px;
   color: #2196f3;
   outline: none;
