--- a/sass/layout/_backdrop.scss
+++ b/sass/layout/_backdrop.scss
@@ -25,7 +25,8 @@
 
   padding: 40px;
 
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   height: 610px;
 
   background: #ffffff;
@@ -106,7 +107,8 @@
 
 .services__input {
   padding-left: 42px;
-  width: 370px;
+  width: 100%;
+  max-width: 370px;
   height: 44px;
 
   color: $primary-color;
@@ -141,7 +143,8 @@
 
 .services__textarea {
   padding: 12px 16px;
-  width: 370px;
+  width: 100%;
+  max-width: 370px;
   height: 120px;
 
   color: $primary-color;
