--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -110,6 +110,12 @@ img {
   color: #2196f3;
 }
 
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
 .header {
   border-bottom: 1px solid #ececec;
 }
