--- a/sass/layout/main/_hero.scss
+++ b/sass/layout/main/_hero.scss
@@ -3,29 +3,57 @@
   // padding-top: 200px;
   // padding-bottom: 200px;
   padding: 118px 0;
+  margin-right: auto;
+  margin-left: auto;
   // background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
   //   url(../images/Hero-Img.jpg);
+  max-width: 480px;
+  max-height: 400px;
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/hero-mob.jpg);
+    url(../../../images/hero-mob@1.jpg);
   background-repeat: no-repeat;
   // background-size: contain;
   background-position: center;
+  background-size: 480px 400px;
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../../../images/hero-mob@2.jpg');
+  }
 
   @media screen and (min-width: 768px) {
+    max-width: 768px;
+    max-height: 400px;
+
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero-tab.jpg);
+      url(../images/hero-tab@1.jpg);
+    background-size: 768px 400px;
+
     // background-size: cover;
 
     // background-repeat: no-repeat;
+
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../../../images/hero-tab@2.jpg');
+    }
   }
   @media screen and (min-width: 1200px) {
     padding: 200px 0;
+    max-width: 1600px;
+    max-height: 600px;
 
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero-desk.jpg);
+      url(../images/hero-desk@1.jpg);
+    background-size: 1600px 600px;
     // background-size: contain;
     // background-repeat: no-repeat;
+
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../../../images/hero-desk@2.jpg');
+    }
   }
 }
 
