--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/visually-hidden';
 @import './components/current';
 @import './components/logo';
+@import './components/is-hidden';
 
 @import './layout/header';
 @import './layout/main/hero';
