--- a/css/main.css
+++ b/css/main.css
@@ -316,6 +316,7 @@ img {
   width: 100vw;
   height: 100vh;
   background-color: #ffffff;
+  z-index: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -815,6 +816,9 @@ img {
 }
 
 @media screen and (max-width: 767px) {
+  .logo-company-list__item {
+    width: calc((100% - 30px) / 2);
+  }
   .logo-company-list__item:not(:nth-child(2n)) {
     margin-right: 30px;
   }
@@ -839,7 +843,6 @@ img {
 }
 
 .logo-company-list__link {
-  width: 210px;
   height: 92px;
   display: flex;
   justify-content: center;
@@ -850,6 +853,11 @@ img {
 }
 .logo-company-list__link:hover, .logo-company-list__link:focus {
   border: 1px solid #2196f3;
+}
+@media screen and (max-width: 767px) {
+  .logo-company-list__link {
+    max-width: 210px;
+  }
 }
 @media screen and (min-width: 768px) {
   .logo-company-list__link {
@@ -1024,7 +1032,8 @@ img {
 
 .footer-subscribe__input {
   padding-left: 16px;
-  width: 358px;
+  width: 100%;
+  max-width: 450px;
   height: 50px;
   color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1039,6 +1048,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .footer-subscribe__input {
+    width: 358px;
     margin-right: 12px;
   }
 }
@@ -1049,6 +1059,7 @@ img {
   align-items: center;
   width: 200px;
   height: 50px;
+  padding: 10px 28px;
   color: #ffffff;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1082,7 +1093,6 @@ img {
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
   width: 100%;
-  max-width: 450px;
   height: 610px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1091,6 +1101,11 @@ img {
 }
 .backdrop.is-hidden .modal {
   transform: scale(0.5);
+}
+@media screen and (max-width: 1199px) {
+  .modal {
+    max-width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -1160,7 +1175,6 @@ img {
 .services__input {
   padding-left: 42px;
   width: 100%;
-  max-width: 370px;
   height: 44px;
   color: #2196f3;
   outline: none;
@@ -1170,6 +1184,11 @@ img {
 }
 .services__input:focus {
   border-color: #2196f3;
+}
+@media screen and (max-width: 1199px) {
+  .services__input {
+    max-width: 370px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .services__input {
@@ -1192,7 +1211,6 @@ img {
 .services__textarea {
   padding: 12px 16px;
   width: 100%;
-  max-width: 370px;
   height: 120px;
   color: #2196f3;
   outline: none;
@@ -1211,6 +1229,11 @@ img {
 }
 .services__textarea:focus {
   border-color: #2196f3;
+}
+@media screen and (max-width: 1199px) {
+  .services__textarea {
+    max-width: 370px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .services__textarea {
