--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -316,6 +316,7 @@ img {
   width: 100vw;
   height: 100vh;
   background-color: #ffffff;
+  z-index: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -468,16 +469,34 @@ img {
 .skills-list {
   display: flex;
   flex-wrap: wrap;
+  max-width: 450px;
 }
 
 .skills-list__item {
   background-color: #eeeeee;
 }
-.skills-list__item:not(:nth-last-child(-n+3)) {
-  margin-bottom: 30px;
+@media screen and (max-width: 767px) {
+  .skills-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
-.skills-list__item:not(:nth-child(3n)) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .skills-list__item {
+    width: 354px;
+  }
+  .skills-list__item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .skills-list__item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .skills-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .skills-list__link {
@@ -690,7 +709,8 @@ img {
 
 .footer-subscribe__input {
   padding-left: 16px;
-  width: 358px;
+  width: 100%;
+  max-width: 450px;
   height: 50px;
   color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -705,6 +725,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .footer-subscribe__input {
+    width: 358px;
     margin-right: 12px;
   }
 }
@@ -715,6 +736,7 @@ img {
   align-items: center;
   width: 200px;
   height: 50px;
+  padding: 10px 28px;
   color: #ffffff;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
