--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -150,7 +150,8 @@
 
 .footer-subscribe__input {
   padding-left: 16px;
-  width: 358px;
+  width: 100%;
+  max-width: 450px;
   height: 50px;
 
   color: #ffffff;
@@ -164,6 +165,7 @@
   }
 
   @media screen and (min-width: 1200px) {
+    width: 358px;
     margin-right: 12px;
   }
 }
@@ -174,6 +176,7 @@
   align-items: center;
   width: 200px;
   height: 50px;
+  padding: 10px 28px;
 
   color: #ffffff;
   background: $primary-color;
