--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -215,6 +215,7 @@
 
   background-color: #ffffff;
 
+  z-index: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
