--- a/sass/layout/main/_company.scss
+++ b/sass/layout/main/_company.scss
@@ -32,6 +32,8 @@
 
 .logo-company-list__item {
   @media screen and (max-width: 767px) {
+    width: calc((100% - 30px) / 2);
+
     &:not(:nth-child(2n)) {
       margin-right: 30px;
     }
@@ -59,7 +61,6 @@
 }
 
 .logo-company-list__link {
-  width: 210px;
   height: 92px;
   display: flex;
   justify-content: center;
@@ -73,6 +74,10 @@
   &:hover,
   &:focus {
     border: 1px solid $primary-color;
+  }
+
+  @media screen and (max-width: 767px) {
+    max-width: 210px;
   }
 
   @media screen and (min-width: 768px) {
