--- a/sass/layout/portfolio/_hero-portfolio.scss
+++ b/sass/layout/portfolio/_hero-portfolio.scss
@@ -55,17 +55,42 @@
 .skills-list {
   display: flex;
   flex-wrap: wrap;
+  max-width: 450px;
 }
 
 .skills-list__item {
   background-color: #eeeeee;
 
-  &:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
+  // &:not(:nth-last-child(-n + 3)) {
+  //   margin-bottom: 30px;
+  // }
+
+  // &:not(:nth-child(3n)) {
+  //   margin-right: 30px;
+  // }
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
 
-  &:not(:nth-child(3n)) {
-    margin-right: 30px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
+    }
+  }
+
+  @media screen and (max-width: 1199px) {
+    &:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
 
