--- a/sass/layout/portfolio/_hero-portfolio.scss
+++ b/sass/layout/portfolio/_hero-portfolio.scss
@@ -83,14 +83,14 @@
   //   }
   // }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 354px;
-  }
-
-  @media screen and (max-width: 1199px) {
     &:not(:nth-child(2n)) {
       margin-right: 30px;
     }
+  }
+
+  @media screen and (max-width: 1199px) {
     &:not(:last-child) {
       margin-bottom: 30px;
     }
